[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "openai == 1.13.3",
    "anthropic == 0.19.1",
    "fireworks-ai == 0.13.0",
    "groq == 0.4.2",
    "mistralai == 0.1.6",
    "python-dotenv == 1.0.1",
    "replicate == 0.24.0",
    "together == 0.2.11",
]
name = "api4all"
version = "0.2.7"
requires-python = ">=3.8"
authors = [
  {name = "Hieu Nguyen", email = "hieung.tech@gmail.com"}
]
maintainers = [
  {name = "Hieu Nguyen", email = "hieung.tech@gmail.com"}
]
description = "Easy-to-use LLM API from a state-of-the-art provider and comparison"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["llm", "llmapi", "llminference", "llmprovider", "llmprice", "llmlearderboard", "llmpricing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hieuminh65/api4all"
Documentation = "https://github.com/hieuminh65/api4all"
Repository = "https://github.com/hieuminh65/api4all"
Changelog = "https://github.com/hieuminh65/api4all/blob/main/CHANGELOG.md"